[gd_scene load_steps=13 format=3 uid="uid://d2voxarn0hsn"]

[ext_resource type="Script" uid="uid://cuv5cgmdf704p" path="res://scripts/game_pause.gd" id="1_a6y5l"]
[ext_resource type="Texture2D" uid="uid://cfopd3ay6cwk8" path="res://assets/sprites/ui/panel_background.png" id="3_4ebqm"]
[ext_resource type="Texture2D" uid="uid://bpaqa2l0e5qth" path="res://assets/sprites/ui/button_normal.png" id="4_l8nc6"]
[ext_resource type="Texture2D" uid="uid://2861gcblrnma" path="res://assets/sprites/ui/button_fill.png" id="5_o8k8j"]
[ext_resource type="Texture2D" uid="uid://ppsa8o5qrkxd" path="res://assets/sprites/ui/button_outline.png" id="6_6tp7g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l8nc6"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 1.0
content_margin_bottom = 12.0
texture = ExtResource("3_4ebqm")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_o8k8j"]
font_size = 32
font_color = Color(0.8980392, 0.67058825, 0.05490196, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o8k8j"]
texture = ExtResource("3_4ebqm")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ammij"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("4_l8nc6")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u6am4"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("5_o8k8j")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ld3r4"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("5_o8k8j")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mcau"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("6_6tp7g")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="GamePause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a6y5l")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PausedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/normal = SubResource("StyleBoxTexture_l8nc6")
text = "Paused"
label_settings = SubResource("LabelSettings_o8k8j")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o8k8j")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.67058825, 0.05490196, 1)
theme_override_colors/font_focus_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_colors/font_hover_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_ammij")
theme_override_styles/pressed = SubResource("StyleBoxTexture_u6am4")
theme_override_styles/hover = SubResource("StyleBoxTexture_ld3r4")
theme_override_styles/focus = SubResource("StyleBoxTexture_0mcau")
text = "Resume
"

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.67058825, 0.05490196, 1)
theme_override_colors/font_focus_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_colors/font_hover_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_ammij")
theme_override_styles/pressed = SubResource("StyleBoxTexture_u6am4")
theme_override_styles/hover = SubResource("StyleBoxTexture_ld3r4")
theme_override_styles/focus = SubResource("StyleBoxTexture_0mcau")
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
